Fix Sponsors text alignment

--- a/assets/sass/custom/_general.scss
+++ b/assets/sass/custom/_general.scss
@@ -13,6 +13,10 @@
   text-align: center;
 }
 
+#sponsors h2 {
+  text-align: left;
+}
+
 .sponsor {
   display: inline-block;
   margin: 20px;
